--- a/contacts.css
+++ b/contacts.css
@@ -187,199 +187,197 @@ header:hover input.toggle:checked + label div#navbar a {
   }
 }
 
-
-
-
-h1, p {
-    color: var(--main-text-color);
+h1,
+p {
+  color: var(--main-text-color);
 }
 
 header {
-    position: fixed;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    border-bottom: 0.2em solid var(--light-color);
-    transition: 1s;
-    background-color: var(--main-color);
-    z-index: 1000;
+  position: fixed;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  border-bottom: 0.2em solid var(--light-color);
+  transition: 1s;
+  background-color: var(--main-color);
+  z-index: 1000;
 }
 
 header aside img {
-    width: 5rem;
-    margin-top: 0.3rem;
-    margin-bottom: 0.3rem;
+  width: 5rem;
+  margin-top: 0.3rem;
+  margin-bottom: 0.3rem;
 }
 
 header p {
-    font-size: 1.2em;
-    color: var(--light-color);
-    transition: 1s;
+  font-size: 1.2em;
+  color: var(--light-color);
+  transition: 1s;
 }
 
 header #center {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 header #socials {
-    color: var(--light-color);
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    width: 10em;
-    transition: 1.5s;
+  color: var(--light-color);
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 10em;
+  transition: 1.5s;
 }
 
 header #socials a {
-    color: var(--light-color);
-    text-decoration: none;
-    transition: 1.5s;
+  color: var(--light-color);
+  text-decoration: none;
+  transition: 1.5s;
 }
 
 button {
-    border: 2px solid var(--light-color);
-    padding: 1rem;
-    width: 10rem;
-    border-radius: 25px;
-    background-color: var(--main-color);
-    color: var(--light-color);
-    transition: 1.5s;
+  border: 2px solid var(--light-color);
+  padding: 1rem;
+  width: 10rem;
+  border-radius: 25px;
+  background-color: var(--main-color);
+  color: var(--light-color);
+  transition: 1.5s;
 }
 
-button :hover{
-    background-color: var(--main-color);
+button :hover {
+  background-color: var(--main-color);
 }
 
 header:hover {
-    background-color: var(--light-color);
-    border-bottom: 0.2em solid var(--main-color);
+  background-color: var(--light-color);
+  border-bottom: 0.2em solid var(--main-color);
 }
 
 header:hover img {
-    content: url(Medias/Logo/logo-supinfo.png);
+  content: url(Medias/Logo/logo-supinfo.png);
 }
 
 header:hover p {
-    color: var(--main-color);
+  color: var(--main-color);
 }
 
 header:hover #socials {
-    color: var(--main-color);
+  color: var(--main-color);
 }
 
 header:hover #socials a {
-    color: var(--main-color);
-    text-decoration: none;
+  color: var(--main-color);
+  text-decoration: none;
 }
 
 header:hover #socials a:hover {
-    transform: scale(1.5);
-    color: var(--darker-main-color);
+  transform: scale(1.5);
+  color: var(--darker-main-color);
 }
 
 header:hover button {
-    border: 2px solid var(--dark-color);
+  border: 2px solid var(--dark-color);
 }
 
 header:hover button:hover {
-    border: 2px solid var(--dark-color);
-    transform: scale(0.9);
-    background-color: var(--lighter-main-color);
+  border: 2px solid var(--dark-color);
+  transform: scale(0.9);
+  background-color: var(--lighter-main-color);
 }
 #scroll_top {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: fixed;
-    border-radius: 50%;
-    width: 25px;
-    height: 25px;
-    bottom: 50px;
-    right: 30px;
-    background-color: var(--lighterer-main-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  border-radius: 50%;
+  width: 25px;
+  height: 25px;
+  bottom: 50px;
+  right: 30px;
+  background-color: var(--lighterer-main-color);
 }
-#arrow{
-    color: var(--dark-color);
+#arrow {
+  color: var(--dark-color);
 }
-#haut{
-    display: flex;
-    width: 10em;
+#haut {
+  display: flex;
+  width: 10em;
 }
-#title{
-    height: 4em;
-    background-color: var(--main-color);
-    margin-top: 6em;
-    text-align: -webkit-center;
-    color: white;
-}
-
-p{
-    color: white;
-}
-#contact{
-     display: flex;
-    flex-direction: column;
-}
-label{
-    color: var(--light-color);
-    margin: 1em;
-}
-select{
-    width: 75%;
-    display: flex;
-    align-items: center;
-    margin-left: 2em;
-}
-input{
-    width: 75% ;
-    display: flex;
-    align-items: center;
-    margin-left: 2em;
-}
-#envoyer{
-    margin-top: 1em;
-    margin-bottom: 1em;
-    background-color: var(--main-color);
-    color: var(--light-color);
-    text-align: center;
+#title {
+  height: 4em;
+  background-color: var(--main-color);
+  margin-top: 6em;
+  text-align: -webkit-center;
+  color: white;
 }
 
-footer{
-    background-color:var(--main-color) ;
-    width: 100%;
+p {
+  color: white;
 }
-#bottom{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    background-color: var(--main-color);
+#contact {
+  display: flex;
+  flex-direction: column;
+}
+label {
+  color: var(--light-color);
+  margin: 1em;
+}
+select {
+  width: 75%;
+  display: flex;
+  align-items: center;
+  margin-left: 2em;
+}
+input {
+  width: 75%;
+  display: flex;
+  align-items: center;
+  margin-left: 2em;
+}
+#envoyer {
+  margin-top: 1em;
+  margin-bottom: 1em;
+  background-color: var(--main-color);
+  color: var(--light-color);
+  text-align: center;
+}
+
+footer {
+  background-color: var(--main-color);
+  width: 100%;
+}
+#bottom {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  background-color: var(--main-color);
 }
 footer #rsocial {
-    color: var(--light-color);
-    display: flex;
-    justify-content: space-evenly;
-    margin-top: 2em;
-    transition: 1.5s;
+  color: var(--light-color);
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 2em;
+  transition: 1.5s;
 }
-footer #rsocial a{
-    margin: 5px;
-    color: var(--light-color);
-    text-decoration: none;
-    transition: 1.5s;
+footer #rsocial a {
+  margin: 5px;
+  color: var(--light-color);
+  text-decoration: none;
+  transition: 1.5s;
 }
-#menu{
-    color: var(--light-color);
-    margin: 1em;
+#menu {
+  color: var(--light-color);
+  margin: 1em;
 }
-#txtbottom{
-    max-width: 30%;
-    color: var(--light-color);
+#txtbottom {
+  max-width: 30%;
+  color: var(--light-color);
 }
 #imgfoot {
-    margin-top: 10px;
-    margin-left: 10px;
+  margin-top: 10px;
+  margin-left: 10px;
 }
