--- a/contacts.css
+++ b/contacts.css
@@ -117,6 +117,17 @@ header:hover button:hover {
   background-color: var(--lighter-main-color);
 }
 
+h1 {
+  color: var(--main-text-color);
+  text-align: center;
+}
+
+.card {
+  background-color: var(--lighter-main-color);
+  display: flex;
+  width: 70%;
+}
+
 input.toggle {
   opacity: 0;
   position: absolute;
@@ -128,7 +139,6 @@ nav i {
 }
 
 header:hover nav i {
-  transform: scale(3);
   color: var(--main-color);
 }
 
@@ -175,6 +185,104 @@ header:hover input.toggle:checked + label div#navbar a {
   color: var(--main-color);
 }
 
+main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 15px;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  width: max-content;
+  align-items: center;
+}
+
+h3 {
+  color: var(--light-color);
+  margin: 2em;
+}
+
+input,
+select {
+  margin-bottom: 2em;
+  width: 15em;
+  border-radius: 5px;
+  margin-right: 1em;
+  margin-left: 1em;
+}
+
+select {
+  width: 32em;
+}
+
+textarea {
+  width: 90%;
+  border-radius: 5px;
+  height: 25vh;
+}
+
+.ensemble {
+  display: flex;
+  flex-direction: column;
+}
+
+section {
+  display: flex;
+  flex-direction: row;
+}
+
+#spacing {
+  height: 8em;
+}
+
+footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  background-color: var(--main-color);
+  width: 100%;
+  margin-top: 2em;
+  padding-top: 2em;
+}
+
+footer img {
+  width: 7em;
+  height: 7em;
+}
+
+footer h2 {
+  margin-top: 0;
+}
+
+footer #infos {
+  max-width: 30%;
+  color: var(--light-color);
+}
+
+footer #socials {
+  display: flex;
+  justify-content: space-evenly;
+  width: 10%;
+}
+
+footer #socials a {
+  color: var(--light-color);
+  text-decoration: none;
+}
+
+footer #redirect {
+  color: var(--light-color);
+}
+
 @keyframes dropdown {
   to {
     height: 4em;
@@ -187,197 +295,149 @@ header:hover input.toggle:checked + label div#navbar a {
   }
 }
 
-h1,
-p {
-  color: var(--main-text-color);
+@keyframes pulse {
+  to {
+    box-shadow: 0 0 0 2.5px var(--lighter-main-color);
+  }
 }
 
-header {
-  position: fixed;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  border-bottom: 0.2em solid var(--light-color);
-  transition: 1s;
-  background-color: var(--main-color);
-  z-index: 1000;
+@keyframes gradient {
+  to {
+    color: var(--lighter-main-color);
+  }
 }
 
-header aside img {
-  width: 5rem;
-  margin-top: 0.3rem;
-  margin-bottom: 0.3rem;
+/* responsive on phones */
+@media only screen and (max-width: 600px) {
+  header {
+    flex-direction: column;
+  }
+
+  header aside img {
+    width: 3em;
+  }
+
+  header p {
+    font-size: 0.8em;
+    margin-top: 0;
+  }
+
+  nav {
+    margin-top: 1em;
+    margin-bottom: 0.5em;
+  }
+
+  nav i {
+    transform: scale(1.5);
+  }
+
+  div#navbar {
+    top: 10em;
+  }
+
+  input.toggle:checked + label div#navbar {
+    flex-direction: column;
+    top: 9.5em;
+    height: 11em;
+  }
+
+  input.toggle:checked + label div#navbar a {
+    font-size: 1em;
+  }
+
+  .card {
+    width: 75%;
+  }
+
+  form {
+    width: 70%;
+  }
+
+  section {
+    flex-direction: column;
+  }
+
+  textarea {
+    width: 100%;
+  }
+
+  select {
+    width: 90%;
+  }
+
+  footer {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  footer img {
+    width: 0;
+    height: 0;
+  }
+
+  footer #infos {
+    max-width: 90%;
+  }
+
+  footer #socials {
+    width: 30%;
+  }
+
+  footer #redirect {
+    width: 50%;
+    align-items: center;
+    justify-content: space-evenly;
+    display: flex;
+    flex-direction: row;
+  }
 }
 
-header p {
-  font-size: 1.2em;
-  color: var(--light-color);
-  transition: 1s;
-}
+/* responsive on tablet */
+@media only screen and (min-width: 601px) and (max-width: 768px) {
+  header {
+    height: 6em;
+  }
 
-header #center {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
+  header aside img {
+    width: 4em;
+  }
 
-header #socials {
-  color: var(--light-color);
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  width: 10em;
-  transition: 1.5s;
-}
+  header p {
+    font-size: 1em;
+    margin-top: 0;
+  }
 
-header #socials a {
-  color: var(--light-color);
-  text-decoration: none;
-  transition: 1.5s;
-}
+  input.toggle:checked + label div#navbar a {
+    font-size: 1.1em;
+  }
 
-button {
-  border: 2px solid var(--light-color);
-  padding: 1rem;
-  width: 10rem;
-  border-radius: 25px;
-  background-color: var(--main-color);
-  color: var(--light-color);
-  transition: 1.5s;
-}
+  .card {
+    width: 80%;
+  }
 
-button :hover {
-  background-color: var(--main-color);
-}
+  footer {
+    flex-direction: column;
+    align-items: center;
+  }
 
-header:hover {
-  background-color: var(--light-color);
-  border-bottom: 0.2em solid var(--main-color);
-}
+  footer img {
+    width: 0;
+    height: 0;
+  }
 
-header:hover img {
-  content: url(Medias/Logo/logo-supinfo.png);
-}
+  footer #infos {
+    max-width: 90%;
+  }
 
-header:hover p {
-  color: var(--main-color);
-}
+  footer #socials {
+    width: 30%;
+  }
 
-header:hover #socials {
-  color: var(--main-color);
-}
-
-header:hover #socials a {
-  color: var(--main-color);
-  text-decoration: none;
-}
-
-header:hover #socials a:hover {
-  transform: scale(1.5);
-  color: var(--darker-main-color);
-}
-
-header:hover button {
-  border: 2px solid var(--dark-color);
-}
-
-header:hover button:hover {
-  border: 2px solid var(--dark-color);
-  transform: scale(0.9);
-  background-color: var(--lighter-main-color);
-}
-#scroll_top {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: fixed;
-  border-radius: 50%;
-  width: 25px;
-  height: 25px;
-  bottom: 50px;
-  right: 30px;
-  background-color: var(--lighterer-main-color);
-}
-#arrow {
-  color: var(--dark-color);
-}
-#haut {
-  display: flex;
-  width: 10em;
-}
-#title {
-  height: 4em;
-  background-color: var(--main-color);
-  margin-top: 6em;
-  text-align: -webkit-center;
-  color: white;
-}
-
-p {
-  color: white;
-}
-#contact {
-  display: flex;
-  flex-direction: column;
-}
-label {
-  color: var(--light-color);
-  margin: 1em;
-}
-select {
-  width: 75%;
-  display: flex;
-  align-items: center;
-  margin-left: 2em;
-}
-input {
-  width: 75%;
-  display: flex;
-  align-items: center;
-  margin-left: 2em;
-}
-#envoyer {
-  margin-top: 1em;
-  margin-bottom: 1em;
-  background-color: var(--main-color);
-  color: var(--light-color);
-  text-align: center;
-}
-
-footer {
-  background-color: var(--main-color);
-  width: 100%;
-}
-#bottom {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  background-color: var(--main-color);
-}
-footer #rsocial {
-  color: var(--light-color);
-  display: flex;
-  justify-content: space-evenly;
-  margin-top: 2em;
-  transition: 1.5s;
-}
-footer #rsocial a {
-  margin: 5px;
-  color: var(--light-color);
-  text-decoration: none;
-  transition: 1.5s;
-}
-#menu {
-  color: var(--light-color);
-  margin: 1em;
-}
-#txtbottom {
-  max-width: 30%;
-  color: var(--light-color);
-}
-#imgfoot {
-  margin-top: 10px;
-  margin-left: 10px;
+  footer #redirect {
+    width: 50%;
+    align-items: center;
+    justify-content: space-evenly;
+    display: flex;
+    flex-direction: row;
+  }
 }
