--- a/cours.css
+++ b/cours.css
@@ -128,7 +128,6 @@ nav i {
 }
 
 header:hover nav i {
-  transform: scale(3);
   color: var(--main-color);
 }
 
@@ -187,385 +186,214 @@ header:hover input.toggle:checked + label div#navbar a {
   }
 }
 
-body {
-  margin: 0;
-  background-color: var(--darker-main-color);
+#spacing {
+  height: 10em;
 }
 
-header {
-  position: fixed;
-  top: 0;
-  width: 100%;
+main {
   display: flex;
-  align-items: center;
-  justify-content: space-around;
-  border-bottom: 0.2em solid var(--light-color);
-  transition: 2s;
-  background-color: var(--main-color);
-  z-index: 1000;
-}
-
-header aside img {
-  width: 5rem;
-  margin-top: 0.3rem;
-  margin-bottom: 0.3rem;
-}
-
-header p {
-  font-size: 1.2em;
-  color: var(--main-text-color);
-  transition: 2s;
-}
-
-header #center {
-  display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
 
-header #socials {
-  color: var(--main-text-color);
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  width: 10em;
-  transition: 1.5s;
-}
-
-header #socials a {
-  color: var(--main-text-color);
-  text-decoration: none;
-  transition: 1.5s;
-}
-
-button {
-  border: 2px solid var(--light-color);
-  padding: 1rem;
-  width: 10rem;
-  border-radius: 25px;
-  background-color: var(--main-color);
-  color: var(--main-text-color);
-  transition: 1.5s;
-}
-
-button :hover {
-  background-color: var(--main-color);
-}
-
-header:hover {
-  background-color: var(--light-color);
-  border-bottom: 0.2em solid var(--main-color);
-}
-
-header:hover img {
-  content: url(Medias/Logo/logo-supinfo.png);
-}
-
-header:hover p {
-  color: var(--main-color);
-}
-
-header:hover #socials {
-  color: var(--main-color);
-}
-
-header:hover #socials a {
-  color: var(--main-color);
-  text-decoration: none;
-}
-
-header:hover #socials a:hover {
-  transform: scale(1.5);
-  color: var(--darker-main-color);
-}
-
-header:hover button {
-  border: 2px solid var(--dark-color);
-}
-
-header:hover button:hover {
-  border: 2px solid var(--dark-color);
-  transform: scale(1.1);
-  background-color: var(--lighter-main-color);
-}
-
-input.toggle {
-  opacity: 0;
-  position: absolute;
-}
-
-nav i {
-  transform: scale(3);
-  color: var(--light-color);
-}
-
-header:hover nav i {
-  transform: scale(3);
-  color: var(--main-color);
-}
-
-div#navbar {
-  position: absolute;
-  left: 0;
-  top: 6em;
-  width: 100%;
-  height: 0;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  animation: 0.5s dropdown;
-  transition: 2s;
-}
-
-div#navbar a {
-  text-decoration: none;
-  color: var(--light-color);
-  opacity: 0;
-  transition: 2s;
-}
-
-input.toggle:checked + label div#navbar {
-  height: 4em;
-  background-color: var(--main-color);
-  border-bottom: 0.3em solid var(--light-color);
-  border-top: 0.3em solid var(--darker-main-color);
-  transition: 2s;
-}
-
-input.toggle:checked + label div#navbar a {
-  font-size: 1.3em;
+h1 {
   text-align: center;
-  animation: 1.2s apear forwards;
-}
-
-header:hover input.toggle:checked + label div#navbar {
-  background-color: var(--light-color);
-  border-bottom: 0.2em solid var(--main-color);
-}
-
-header:hover input.toggle:checked + label div#navbar a {
-  color: var(--main-color);
-}
-
-@keyframes dropdown {
-  to {
-    height: 4em;
-  }
-}
-
-@keyframes apear {
-  to {
-    opacity: 100%;
-  }
-}
-
-h1,
-p {
-  color: var(--main-text-color);
-}
-
-header {
-  position: fixed;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  border-bottom: 0.2em solid var(--light-color);
-  transition: 1s;
-  background-color: var(--main-color);
-  z-index: 1000;
-}
-
-header aside img {
-  width: 5rem;
-  margin-top: 0.3rem;
-  margin-bottom: 0.3rem;
-}
-
-header p {
-  font-size: 1.2em;
   color: var(--light-color);
-  transition: 1s;
 }
 
-header #center {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-header #socials {
-  color: var(--light-color);
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  width: 10em;
-  transition: 1.5s;
-}
-
-header #socials a {
-  color: var(--light-color);
-  text-decoration: none;
-  transition: 1.5s;
-}
-
-button {
-  border: 2px solid var(--light-color);
-  padding: 1rem;
-  width: 10rem;
-  border-radius: 25px;
-  background-color: var(--main-color);
-  color: var(--light-color);
-  transition: 1.5s;
-}
-
-button :hover {
-  background-color: var(--main-color);
-}
-
-header:hover {
-  background-color: var(--light-color);
-  border-bottom: 0.2em solid var(--main-color);
-}
-
-header:hover img {
-  content: url(Medias/Logo/logo-supinfo.png);
-}
-
-header:hover p {
-  color: var(--main-color);
-}
-
-header:hover #socials {
-  color: var(--main-color);
-}
-
-header:hover #socials a {
-  color: var(--main-color);
-  text-decoration: none;
-}
-
-header:hover #socials a:hover {
-  transform: scale(1.5);
-  color: var(--darker-main-color);
-}
-
-header:hover button {
-  border: 2px solid var(--dark-color);
-}
-
-header:hover button:hover {
-  border: 2px solid var(--dark-color);
-  transform: scale(0.9);
-  background-color: var(--lighter-main-color);
-}
-html {
-  scroll-behavior: smooth;
-}
-body {
-  margin: 0;
-  background-color: var(--darker-main-color);
-}
-#scroll_top {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: fixed;
-  border-radius: 50%;
-  width: 25px;
-  height: 25px;
-  bottom: 50px;
-  right: 30px;
-  background-color: var(--lighterer-main-color);
-}
-#arrow {
-  color: var(--dark-color);
-}
 h3 {
   margin-bottom: 0;
 }
+
 p {
   margin-top: 0.3em;
 }
-#hdp {
-  color: rgb(96, 40, 147);
-}
-#txt {
-  display: flex;
-  flex-direction: column;
-}
-#picture {
-  float: left;
-}
-#title {
-  margin: auto;
-  text-align: center;
-  color: black;
-}
 
-#fond-title {
-  width: 650px;
-  height: 70px;
-}
 fieldset {
+  background-color: var(--lighter-main-color);
+  display: flex;
   border-color: var(--light-color);
   border-radius: 10px;
-  margin: 2em;
-  margin-left: 10em;
-  margin-right: 10em;
+  margin-top: 2em;
+  margin-bottom: 2em;
+  width: 75%;
 }
+
 legend {
   color: var(--light-color);
 }
-.txt {
-  color: var(--light-color);
-}
-.foottxtl {
-  color: white;
-  font-size: small;
-  margin-left: 10px;
-}
+
 ul {
   color: var(--light-color);
 }
 
-.pdgrp {
-  color: var(--light-color);
-}
 footer {
-  background-color: var(--main-color);
-  width: 100%;
-}
-#bottom {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   background-color: var(--main-color);
-}
-footer #rsocial {
-  color: var(--light-color);
-  display: flex;
-  justify-content: space-evenly;
+  width: 100%;
   margin-top: 2em;
-  transition: 1.5s;
+  padding-top: 2em;
 }
-footer #rsocial a {
-  margin: 5px;
-  color: var(--light-color);
-  text-decoration: none;
-  transition: 1.5s;
+
+footer img {
+  width: 7em;
+  height: 7em;
 }
-#menu {
-  color: var(--light-color);
-  margin: 1em;
+
+footer h2 {
+  margin-top: 0;
 }
-#txtbottom {
+
+footer #infos {
   max-width: 30%;
   color: var(--light-color);
 }
-#imgfoot {
-  margin-top: 10px;
-  margin-left: 10px;
+
+footer #socials {
+  display: flex;
+  justify-content: space-evenly;
+  width: 10%;
+}
+
+footer #socials a {
+  color: var(--light-color);
+  text-decoration: none;
+}
+
+footer #redirect {
+  color: var(--light-color);
+}
+
+/* responsive on phones */
+@media only screen and (max-width: 600px) {
+  header {
+    flex-direction: column;
+  }
+
+  header aside img {
+    width: 3em;
+  }
+
+  header p {
+    font-size: 0.8em;
+    margin-top: 0;
+  }
+
+  nav {
+    margin-top: 1em;
+    margin-bottom: 0.5em;
+  }
+
+  nav i {
+    transform: scale(1.5);
+  }
+
+  div#navbar {
+    top: 10em;
+  }
+
+  input.toggle:checked + label div#navbar {
+    flex-direction: column;
+    top: 9.5em;
+    height: 11em;
+  }
+
+  input.toggle:checked + label div#navbar a {
+    font-size: 1em;
+  }
+
+  h1 {
+    font-size: 1.7em;
+  }
+
+  fieldset {
+    margin-top: 0;
+    margin-bottom: 0;
+    width: 85%;
+  }
+
+  footer {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  footer img {
+    width: 0;
+    height: 0;
+  }
+
+  footer #infos {
+    max-width: 90%;
+  }
+
+  footer #socials {
+    width: 30%;
+  }
+
+  footer #redirect {
+    width: 50%;
+    align-items: center;
+    justify-content: space-evenly;
+    display: flex;
+    flex-direction: row;
+  }
+}
+
+/* responsive on tablet */
+@media only screen and (min-width: 601px) and (max-width: 768px) {
+  header {
+    height: 6em;
+  }
+
+  header aside img {
+    width: 4em;
+  }
+
+  header p {
+    font-size: 1em;
+    margin-top: 0;
+  }
+
+  input.toggle:checked + label div#navbar a {
+    font-size: 1.1em;
+  }
+
+  h1 {
+    font-size: 1.8em;
+  }
+
+  fieldset {
+    margin-top: 1em;
+    margin-bottom: 1em;
+    width: 85%;
+  }
+
+  footer {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  footer img {
+    width: 0;
+    height: 0;
+  }
+
+  footer #infos {
+    max-width: 90%;
+  }
+
+  footer #socials {
+    width: 30%;
+  }
+
+  footer #redirect {
+    width: 50%;
+    align-items: center;
+    justify-content: space-evenly;
+    display: flex;
+    flex-direction: row;
+  }
 }
