--- a/planing.css
+++ b/planing.css
@@ -128,7 +128,6 @@ nav i {
 }
 
 header:hover nav i {
-  transform: scale(3);
   color: var(--main-color);
 }
 
@@ -238,20 +237,6 @@ header #socials a {
   transition: 1.5s;
 }
 
-button {
-  border: 2px solid var(--light-color);
-  padding: 1rem;
-  width: 10rem;
-  border-radius: 25px;
-  background-color: var(--main-color);
-  color: var(--light-color);
-  transition: 1.5s;
-}
-
-button :hover {
-  background-color: var(--main-color);
-}
-
 header:hover {
   background-color: var(--light-color);
   border-bottom: 0.2em solid var(--main-color);
@@ -288,91 +273,226 @@ header:hover button:hover {
   transform: scale(0.9);
   background-color: var(--lighter-main-color);
 }
-#scroll_top {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: fixed;
-  border-radius: 50%;
-  width: 25px;
-  height: 25px;
-  bottom: 50px;
-  right: 30px;
-  background-color: var(--lighterer-main-color);
+
+#spacing {
+  height: 8em;
 }
-#arrow {
-  color: var(--dark-color);
-}
+
 #grille {
   display: flex;
   align-content: center;
   justify-content: center;
 }
+
 table {
-  border: solid white;
+  border: solid var(--light-color);
   border-collapse: collapse;
-  margin: 10em;
 }
+
 tr {
-  color: white;
+  color: var(--light-color);
+}
+
+th {
+  background-color: var(--dark-color);
 }
 
 td {
-  color: white;
-  border-top: solid white;
-  border-left: solid white;
-  padding: 1em;
-  padding-left: 3em;
-  padding-right: 3em;
+  padding: 0;
+  width: 13vh;
+  height: 6vh;
+  border-top: solid var(--light-color);
+  border-left: solid var(--light-color);
+  color: var(--dark-color);
   text-align: center;
+  background-color: var(--lighter-main-color);
 }
+
 .rentre {
   background-color: lightpink;
 }
+
 .html {
   background-color: hotpink;
 }
+
 .css {
   background-color: deeppink;
 }
+
 #midi {
-  background-color: rgb(158, 62, 255);
+  background-color: violet;
 }
-.pdgrp {
-  color: var(--light-color);
-}
+
 footer {
-  background-color: var(--main-color);
-  width: 100%;
-}
-#bottom {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   background-color: var(--main-color);
-}
-footer #rsocial {
-  color: var(--light-color);
-  display: flex;
-  justify-content: space-evenly;
+  width: 100%;
   margin-top: 2em;
-  transition: 1.5s;
+  padding-top: 2em;
 }
-footer #rsocial a {
-  margin: 5px;
-  color: var(--light-color);
-  text-decoration: none;
-  transition: 1.5s;
+
+footer img {
+  width: 7em;
+  height: 7em;
 }
-#menu {
-  color: var(--light-color);
-  margin: 1em;
+
+footer h2 {
+  margin-top: 0;
 }
-#txtbottom {
+
+footer #infos {
   max-width: 30%;
   color: var(--light-color);
 }
-#imgfoot {
-  margin-top: 10px;
-  margin-left: 10px;
+
+footer #socials {
+  display: flex;
+  justify-content: space-evenly;
+  width: 10%;
+}
+
+footer #socials a {
+  color: var(--light-color);
+  text-decoration: none;
+}
+
+footer #redirect {
+  color: var(--light-color);
+}
+
+/* responsive on phones */
+@media only screen and (max-width: 600px) {
+  header {
+    flex-direction: column;
+  }
+
+  header aside img {
+    width: 3em;
+  }
+
+  header p {
+    font-size: 0.8em;
+    margin-top: 0;
+  }
+
+  nav {
+    margin-top: 1em;
+    margin-bottom: 0.5em;
+  }
+
+  nav i {
+    transform: scale(1.5);
+  }
+
+  div#navbar {
+    top: 10em;
+  }
+
+  input.toggle:checked + label div#navbar {
+    flex-direction: column;
+    top: 9.5em;
+    height: 11em;
+  }
+
+  input.toggle:checked + label div#navbar a {
+    font-size: 1em;
+  }
+
+  #spacing {
+    height: 12em;
+  }
+
+  h1 {
+    font-size: 1.7em;
+  }
+
+  td {
+    width: 6vw;
+    height: 3vh;
+    font-size: 0.8em;
+  }
+
+  footer {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  footer img {
+    width: 0;
+    height: 0;
+  }
+
+  footer #infos {
+    max-width: 90%;
+  }
+
+  footer #socials {
+    width: 30%;
+  }
+
+  footer #redirect {
+    width: 50%;
+    align-items: center;
+    justify-content: space-evenly;
+    display: flex;
+    flex-direction: row;
+  }
+}
+
+/* responsive on tablet */
+@media only screen and (min-width: 601px) and (max-width: 768px) {
+  header {
+    height: 6em;
+  }
+
+  header aside img {
+    width: 4em;
+  }
+
+  header p {
+    font-size: 1em;
+    margin-top: 0;
+  }
+
+  input.toggle:checked + label div#navbar a {
+    font-size: 1.1em;
+  }
+
+  h1 {
+    font-size: 1.8em;
+  }
+
+  td {
+    width: 10vh;
+    height: 5vh;
+  }
+
+  footer {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  footer img {
+    width: 0;
+    height: 0;
+  }
+
+  footer #infos {
+    max-width: 90%;
+  }
+
+  footer #socials {
+    width: 30%;
+  }
+
+  footer #redirect {
+    width: 50%;
+    align-items: center;
+    justify-content: space-evenly;
+    display: flex;
+    flex-direction: row;
+  }
 }
