--- a/main.css
+++ b/main.css
@@ -1,16 +1,17 @@
 @import "./fontawesome/css/all.css";
 
 :root {
-  --lighterer-main-color: #b0abd3;
-  --lighter-main-color: #6258a7;
-  --main-color: #3b2f92;
-  --darker-main-color: #1d1749;
-  --darkerer-main-color: #17123a;
+  --brand-color: #3b2f92;
 
-  --main-text-color: #ffffff;
+  --background: #e2e2e2;
+
+  --main-color: #5f7367;
+  --lighter-main-color: #587d71;
+
+  --main-text-color: #e2e2e2;
 
   --light-color: #ffffff;
-  --dimer-color: #a9a9a9;
+  --dim-color: #a9a9a9;
   --dark-color: #000000;
 }
 
@@ -20,7 +21,7 @@ html {
 
 body {
   margin: 0;
-  background-color: var(--darker-main-color);
+  background-color: var(--brand-color);
 }
 
 header {
@@ -32,7 +33,7 @@ header {
   justify-content: space-around;
   border-bottom: 0.2em solid var(--light-color);
   transition: 2s;
-  background-color: var(--main-color);
+  background-color: var(--brand-color);
   z-index: 1000;
 }
 
@@ -75,19 +76,19 @@ button {
   padding: 1rem;
   width: 10rem;
   border-radius: 25px;
-  background-color: var(--main-color);
+  background-color: var(--brand-color);
   color: var(--main-text-color);
   transition: 1.5s;
   width: 100%;
 }
 
 button :hover {
-  background-color: var(--main-color);
+  background-color: var(--brand-color);
 }
 
 header:hover {
   background-color: var(--light-color);
-  border-bottom: 0.2em solid var(--main-color);
+  border-bottom: 0.2em solid var(--brand-color);
 }
 
 header:hover img {
@@ -95,21 +96,21 @@ header:hover img {
 }
 
 header:hover p {
-  color: var(--main-color);
+  color: var(--brand-color);
 }
 
 header:hover #socials {
-  color: var(--main-color);
+  color: var(--brand-color);
 }
 
 header:hover #socials a {
-  color: var(--main-color);
+  color: var(--brand-color);
   text-decoration: none;
 }
 
 header:hover #socials a:hover {
   transform: scale(1.5);
-  color: var(--darker-main-color);
+  color: var(--background);
 }
 
 header:hover button {
@@ -133,7 +134,7 @@ nav i {
 }
 
 header:hover nav i {
-  color: var(--main-color);
+  color: var(--brand-color);
 }
 
 div#navbar {
@@ -158,9 +159,9 @@ div#navbar a {
 
 input.toggle:checked + label div#navbar {
   height: 4em;
-  background-color: var(--main-color);
+  background-color: var(--brand-color);
   border-bottom: 0.3em solid var(--light-color);
-  border-top: 0.3em solid var(--darker-main-color);
+  border-top: 0.3em solid var(--background);
   transition: 2s;
 }
 
@@ -172,16 +173,17 @@ input.toggle:checked + label div#navbar a {
 
 header:hover input.toggle:checked + label div#navbar {
   background-color: var(--light-color);
-  border-bottom: 0.2em solid var(--main-color);
+  border-bottom: 0.2em solid var(--brand-color);
 }
 
 header:hover input.toggle:checked + label div#navbar a {
-  color: var(--main-color);
+  color: var(--brand-color);
 }
 
 #main-decoration {
   z-index: -1;
   text-align: center;
+  background-color: var(--background);
 }
 
 #main-decoration img {
@@ -195,7 +197,7 @@ header:hover input.toggle:checked + label div#navbar a {
   left: 50%;
   width: 70%;
   transform: translate(-50%, -50%);
-  color: var(--main-text-colorr);
+  color: var(--main-text-color);
   font-size: 40px;
   color: var(--light-color);
 }
@@ -207,12 +209,12 @@ header:hover input.toggle:checked + label div#navbar a {
   top: 85%;
   left: 50%;
   transform: translate(-50%);
-  border: 5px double var(--dimer-color);
+  border: 5px double var(--dim-color);
   border-radius: 50%;
   padding: 8px;
   height: 5vh;
   width: auto;
-  box-shadow: 0 0 0 0 var(--darker-main-color);
+  box-shadow: 0 0 0 0 var(--background);
   animation: 1s pulse infinite;
 }
 
@@ -227,10 +229,12 @@ main {
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  background-color: var(--background);
+  padding-bottom: 2em;
 }
 
 h1 {
-  color: var(--main-text-color);
+  color: #000000;
   text-align: center;
 }
 
@@ -238,7 +242,7 @@ section {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: var(--darkerer-main-color);
+  background-color: var(--main-color);
   border-radius: 7.5em 7.5em 4em 4em;
   margin-top: 5em;
   width: 95%;
@@ -272,7 +276,7 @@ section h2 {
 
 .title i {
   margin-left: 1em;
-  color: var(--light-color);
+  color: var(--main-text-color);
 }
 
 #description .title {
@@ -312,7 +316,7 @@ section h2 {
 #description .container img {
   width: 50%;
   border-radius: 50px 0px 0px 50px;
-  border-right: 0.3em solid var(--lighterer-main-color);
+  border-right: 0.3em solid var(--dark-color);
 }
 
 #description .container .card .text {
@@ -330,7 +334,7 @@ section h2 {
   border-radius: 2rem;
   flex-direction: row;
   position: relative;
-  border: 0.3em solid var(--darkerer-main-color);
+  border: 0.3em solid var(--main-color);
   margin-top: 0.2em;
   margin-bottom: 0.2em;
 }
@@ -338,11 +342,12 @@ section h2 {
 #campus .card img {
   width: 25vw;
   border-radius: 1.7em 0em 0em 1.7em;
-  border-right: 0.3em solid var(--lighterer-main-color);
+  border-right: 0.3em solid var(--dark-color);
+  max-width: 14em;
 }
 
 #campus .card .text {
-  color: white;
+  color: var(--main-text-color);
 }
 
 #campus .card .text h4 {
@@ -390,10 +395,11 @@ section h2 {
 }
 
 #specialite .card img {
-  height: 30vh;
+  height: 16vh;
   width: 90%;
   border-radius: 25px;
   transition: 1s;
+  width: 24vw;
 }
 
 #specialite .card h3 {
@@ -490,9 +496,8 @@ footer {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  background-color: var(--main-color);
+  background-color: var(--brand-color);
   width: 100%;
-  margin-top: 2em;
   padding-top: 2em;
 }
 
@@ -620,7 +625,7 @@ footer #redirect {
     border-right: 0;
     width: 100%;
     height: 30vh;
-    border-bottom: 0.3em solid var(--lighterer-main-color);
+    border-bottom: 0.3em solid var(--dark-color);
   }
 
   #description .container .card .text {
@@ -750,7 +755,7 @@ footer #redirect {
     border-right: 0;
     width: 100%;
     height: 30vh;
-    border-bottom: 0.3em solid var(--lighterer-main-color);
+    border-bottom: 0.3em solid var(--dark-color);
   }
 
   #description .container .card .text {
