Validation of the code
the website almost pass the validate in this link: https://validator.w3.org/nu/#file
the only problem that stays is created by the navbar, it could be resolved by using javascript

--- a/contacts.css
+++ b/contacts.css
@@ -52,7 +52,7 @@ header #center {
   justify-content: center;
 }
 
-header #socials {
+header .socials {
   color: var(--main-text-color);
   display: flex;
   align-items: center;
@@ -61,7 +61,7 @@ header #socials {
   transition: 1.5s;
 }
 
-header #socials a {
+header .socials a {
   color: var(--main-text-color);
   text-decoration: none;
   transition: 1.5s;
@@ -80,16 +80,16 @@ header:hover p {
   color: var(--brand-color);
 }
 
-header:hover #socials {
+header:hover .socials {
   color: var(--brand-color);
 }
 
-header:hover #socials a {
+header:hover .socials a {
   color: var(--brand-color);
   text-decoration: none;
 }
 
-header:hover #socials a:hover {
+header:hover .socials a:hover {
   transform: scale(1.5);
   color: var(--dark-color);
 }
@@ -238,7 +238,7 @@ textarea {
   flex-direction: column;
 }
 
-section {
+.wrapper {
   display: flex;
   flex-direction: row;
 }
@@ -270,13 +270,13 @@ footer #infos {
   max-width: 30%;
   color: var(--light-color);
 }
-footer #socials {
+footer .socials {
   display: flex;
   justify-content: space-evenly;
   width: 15%;
 }
 
-footer #socials a {
+footer .socials a {
   color: var(--main-text-color);
   text-decoration: none;
 }
@@ -352,7 +352,7 @@ footer #redirect a {
     width: 70%;
   }
 
-  section {
+  .wrapper {
     flex-direction: column;
   }
 
@@ -378,7 +378,7 @@ footer #redirect a {
     max-width: 90%;
   }
 
-  footer #socials {
+  footer .socials {
     width: 30%;
   }
 
@@ -429,7 +429,7 @@ footer #redirect a {
     max-width: 90%;
   }
 
-  footer #socials {
+  footer .socials {
     width: 30%;
   }
 
