--- a/main.css
+++ b/main.css
@@ -56,7 +56,7 @@ header #center {
   justify-content: center;
 }
 
-header #socials {
+header .socials {
   color: var(--main-text-color);
   display: flex;
   align-items: center;
@@ -65,7 +65,7 @@ header #socials {
   transition: 1.5s;
 }
 
-header #socials a {
+header .socials a {
   color: var(--main-text-color);
   text-decoration: none;
   transition: 1.5s;
@@ -84,16 +84,16 @@ header:hover p {
   color: var(--brand-color);
 }
 
-header:hover #socials {
+header:hover .socials {
   color: var(--brand-color);
 }
 
-header:hover #socials a {
+header:hover .socials a {
   color: var(--brand-color);
   text-decoration: none;
 }
 
-header:hover #socials a:hover {
+header:hover .socials a:hover {
   transform: scale(1.5);
   color: var(--dark-color);
 }
@@ -426,9 +426,10 @@ button {
   display: flex;
   align-items: center;
   justify-content: center;
+  width: fit-content;
 }
 
-#debouches a .button button:hover {
+#debouches .button button:hover {
   cursor: pointer;
   transform: scale(1.1);
   background-color: #3d5f80;
@@ -510,7 +511,7 @@ button {
   width: 65%;
 }
 
-#ionis section {
+#ionis .wrapper {
   width: 50%;
   display: flex;
   align-items: center;
@@ -543,13 +544,13 @@ footer #infos {
   color: var(--light-color);
 }
 
-footer #socials {
+footer .socials {
   display: flex;
   justify-content: space-evenly;
   width: 15%;
 }
 
-footer #socials a {
+footer .socials a {
   color: var(--main-text-color);
   text-decoration: none;
 }
@@ -697,7 +698,7 @@ footer #redirect a {
     align-items: center;
   }
 
-  #ionis .key-elements section {
+  #ionis .key-elements .wrapper {
     width: 90%;
   }
 
@@ -726,7 +727,7 @@ footer #redirect a {
     max-width: 90%;
   }
 
-  footer #socials {
+  footer .socials {
     width: 30%;
   }
 
@@ -817,7 +818,7 @@ footer #redirect a {
     margin: 0.5em;
   }
 
-  #ionis .key-elements section {
+  #ionis .key-elements .wrapper {
     width: 90%;
   }
 
@@ -842,7 +843,7 @@ footer #redirect a {
     max-width: 90%;
   }
 
-  footer #socials {
+  footer .socials {
     width: 30%;
   }
 
